tests/.nts/error/chipset_name_exists.nts
.chipsets:
input  in
output in